Front e Back conectados

--- a/Chat/Views/Chat/Index.cshtml
+++ b/Chat/Views/Chat/Index.cshtml
@@ -21,14 +21,14 @@
 
             <div class="janelaConteudo">
 
-                <form>
-                    <button id="enviar_btn" class="btn btn-enviar waves-effect waves-light" type="submit" name="action">
+                
+                    <button id="enviar_btn" class="btn btn-enviar waves-effect waves-light" type="button" value="okok">
                         Enviar
                         <i class="material-icons right ">send</i>
                     </button>
 
                     <input id="conteudo" type="text" class="validate">
-                </form>
+               
             </div>
         </div>
     </div>
