--- a/Chat/Views/Chat/Index.cshtml
+++ b/Chat/Views/Chat/Index.cshtml
@@ -8,7 +8,9 @@
     <div class="retangulo">
         <div class="retangulo1">
             <h2 class="center-align">Conversas</h2>
+           <div id="logados" class="center-align">
 
+           </div>
         </div>
         <div class="retangulo2">
             <div class="conversaHeader">
