--- a/Chat/Views/Chat/Index.cshtml
+++ b/Chat/Views/Chat/Index.cshtml
@@ -11,6 +11,7 @@
            <div id="logados" class="center-align">
 
            </div>
+            <input id="inputConversa" type="text" placeholder="Usuário" />
         </div>
         <div class="retangulo2">
             <div class="conversaHeader">
